tests/errors/semantic/blocking/INCOMPATIBLE_TYPES_IN_ASSIGNMENT_5.py
# shape
# pylint: disable=missing-function-docstring, missing-module-docstring

a : tuple[tuple[int,...], ...]
a = ((1,2,3), (4,5,6,7))
